# fixed-point-arithmetic

./: .gitignore  CMakeLists.txt
cmake/: find-3rdparty.cmake
src/: library.cpp  main.cpp
